src/fractali/NAFLParser.java
// $ANTLR 3.0.1 C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g 2010-06-14 00:34:35

    package fractali;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class NAFLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROG", "LSYSTEM", "IFS", "FORMULA", "AXIOM", "RULE", "ANGLE", "PRODUCTION", "PRODUCTIONS", "ZTERM", "ADD", "SUB", "CINIT", "MANDELBROT", "JULIA", "CTERM", "ZPOLY", "ONE", "DBL", "LINE", "ARROW", "ANGLE_NUMBER", "DOUBLE", "NUMBER", "ROTATE", "EXPONENT", "WS", "EQUALS", "'lsystem'", "'productions'", "'axiom'", "'angle'", "'formula'", "'c'", "'('", "','", "')'", "'z'", "'+'", "'-'", "'^'", "'ifs'"
    };
    public static final int ZPOLY=20;
    public static final int EXPONENT=29;
    public static final int FORMULA=7;
    public static final int RULE=9;
    public static final int ANGLE=10;
    public static final int NUMBER=27;
    public static final int LSYSTEM=5;
    public static final int SUB=15;
    public static final int JULIA=18;
    public static final int EQUALS=31;
    public static final int ONE=21;
    public static final int ROTATE=28;
    public static final int CINIT=16;
    public static final int EOF=-1;
    public static final int LINE=23;
    public static final int IFS=6;
    public static final int AXIOM=8;
    public static final int ZTERM=13;
    public static final int PRODUCTIONS=12;
    public static final int PROG=4;
    public static final int WS=30;
    public static final int DBL=22;
    public static final int PRODUCTION=11;
    public static final int DOUBLE=26;
    public static final int ARROW=24;
    public static final int ANGLE_NUMBER=25;
    public static final int MANDELBROT=17;
    public static final int CTERM=19;
    public static final int ADD=14;

        public NAFLParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:45:1: program : ( lsystem_type | ifs_type | formula_type );
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        lsystem_type_return lsystem_type1 = null;

        ifs_type_return ifs_type2 = null;

        formula_type_return formula_type3 = null;



        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:45:13: ( lsystem_type | ifs_type | formula_type )
            int alt1=3;
            switch ( input.LA(1) ) {
            case 32:
                {
                alt1=1;
                }
                break;
            case 45:
                {
                alt1=2;
                }
                break;
            case 36:
                {
                alt1=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("45:1: program : ( lsystem_type | ifs_type | formula_type );", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:45:19: lsystem_type
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_lsystem_type_in_program206);
                    lsystem_type1=lsystem_type();
                    _fsp--;

                    adaptor.addChild(root_0, lsystem_type1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:45:34: ifs_type
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifs_type_in_program210);
                    ifs_type2=ifs_type();
                    _fsp--;

                    adaptor.addChild(root_0, ifs_type2.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:45:45: formula_type
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_formula_type_in_program214);
                    formula_type3=formula_type();
                    _fsp--;

                    adaptor.addChild(root_0, formula_type3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class lsystem_type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start lsystem_type
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:46:1: lsystem_type : 'lsystem' axiom_rule angle_rule production_rule -> ^( LSYSTEM axiom_rule angle_rule production_rule ) ;
    public final lsystem_type_return lsystem_type() throws RecognitionException {
        lsystem_type_return retval = new lsystem_type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        axiom_rule_return axiom_rule5 = null;

        angle_rule_return angle_rule6 = null;

        production_rule_return production_rule7 = null;


        Object string_literal4_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_production_rule=new RewriteRuleSubtreeStream(adaptor,"rule production_rule");
        RewriteRuleSubtreeStream stream_angle_rule=new RewriteRuleSubtreeStream(adaptor,"rule angle_rule");
        RewriteRuleSubtreeStream stream_axiom_rule=new RewriteRuleSubtreeStream(adaptor,"rule axiom_rule");
        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:46:17: ( 'lsystem' axiom_rule angle_rule production_rule -> ^( LSYSTEM axiom_rule angle_rule production_rule ) )
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:46:22: 'lsystem' axiom_rule angle_rule production_rule
            {
            string_literal4=(Token)input.LT(1);
            match(input,32,FOLLOW_32_in_lsystem_type227); 
            stream_32.add(string_literal4);

            pushFollow(FOLLOW_axiom_rule_in_lsystem_type229);
            axiom_rule5=axiom_rule();
            _fsp--;

            stream_axiom_rule.add(axiom_rule5.getTree());
            pushFollow(FOLLOW_angle_rule_in_lsystem_type231);
            angle_rule6=angle_rule();
            _fsp--;

            stream_angle_rule.add(angle_rule6.getTree());
            pushFollow(FOLLOW_production_rule_in_lsystem_type233);
            production_rule7=production_rule();
            _fsp--;

            stream_production_rule.add(production_rule7.getTree());

            // AST REWRITE
            // elements: angle_rule, axiom_rule, production_rule
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:4: -> ^( LSYSTEM axiom_rule angle_rule production_rule )
            {
                // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:47:7: ^( LSYSTEM axiom_rule angle_rule production_rule )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(LSYSTEM, "LSYSTEM"), root_1);

                adaptor.addChild(root_1, stream_axiom_rule.next());
                adaptor.addChild(root_1, stream_angle_rule.next());
                adaptor.addChild(root_1, stream_production_rule.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end lsystem_type

    public static class production_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start production
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:48:1: production : ( LINE ARROW RULE -> ^( PRODUCTION LINE RULE ) | LINE ARROW LINE -> ^( PRODUCTION LINE LINE ) );
    public final production_return production() throws RecognitionException {
        production_return retval = new production_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LINE8=null;
        Token ARROW9=null;
        Token RULE10=null;
        Token LINE11=null;
        Token ARROW12=null;
        Token LINE13=null;

        Object LINE8_tree=null;
        Object ARROW9_tree=null;
        Object RULE10_tree=null;
        Object LINE11_tree=null;
        Object ARROW12_tree=null;
        Object LINE13_tree=null;
        RewriteRuleTokenStream stream_ARROW=new RewriteRuleTokenStream(adaptor,"token ARROW");
        RewriteRuleTokenStream stream_RULE=new RewriteRuleTokenStream(adaptor,"token RULE");
        RewriteRuleTokenStream stream_LINE=new RewriteRuleTokenStream(adaptor,"token LINE");

        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:49:2: ( LINE ARROW RULE -> ^( PRODUCTION LINE RULE ) | LINE ARROW LINE -> ^( PRODUCTION LINE LINE ) )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==LINE) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ARROW) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==RULE) ) {
                        alt2=1;
                    }
                    else if ( (LA2_2==LINE) ) {
                        alt2=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("48:1: production : ( LINE ARROW RULE -> ^( PRODUCTION LINE RULE ) | LINE ARROW LINE -> ^( PRODUCTION LINE LINE ) );", 2, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("48:1: production : ( LINE ARROW RULE -> ^( PRODUCTION LINE RULE ) | LINE ARROW LINE -> ^( PRODUCTION LINE LINE ) );", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("48:1: production : ( LINE ARROW RULE -> ^( PRODUCTION LINE RULE ) | LINE ARROW LINE -> ^( PRODUCTION LINE LINE ) );", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:49:6: LINE ARROW RULE
                    {
                    LINE8=(Token)input.LT(1);
                    match(input,LINE,FOLLOW_LINE_in_production258); 
                    stream_LINE.add(LINE8);

                    ARROW9=(Token)input.LT(1);
                    match(input,ARROW,FOLLOW_ARROW_in_production260); 
                    stream_ARROW.add(ARROW9);

                    RULE10=(Token)input.LT(1);
                    match(input,RULE,FOLLOW_RULE_in_production262); 
                    stream_RULE.add(RULE10);


                    // AST REWRITE
                    // elements: LINE, RULE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 49:22: -> ^( PRODUCTION LINE RULE )
                    {
                        // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:49:25: ^( PRODUCTION LINE RULE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(adaptor.create(PRODUCTION, "PRODUCTION"), root_1);

                        adaptor.addChild(root_1, stream_LINE.next());
                        adaptor.addChild(root_1, stream_RULE.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }



                    }
                    break;
                case 2 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:50:7: LINE ARROW LINE
                    {
                    LINE11=(Token)input.LT(1);
                    match(input,LINE,FOLLOW_LINE_in_production280); 
                    stream_LINE.add(LINE11);

                    ARROW12=(Token)input.LT(1);
                    match(input,ARROW,FOLLOW_ARROW_in_production282); 
                    stream_ARROW.add(ARROW12);

                    LINE13=(Token)input.LT(1);
                    match(input,LINE,FOLLOW_LINE_in_production284); 
                    stream_LINE.add(LINE13);


                    // AST REWRITE
                    // elements: LINE, LINE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 50:23: -> ^( PRODUCTION LINE LINE )
                    {
                        // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:50:26: ^( PRODUCTION LINE LINE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(adaptor.create(PRODUCTION, "PRODUCTION"), root_1);

                        adaptor.addChild(root_1, stream_LINE.next());
                        adaptor.addChild(root_1, stream_LINE.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }



                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end production

    public static class production_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start production_rule
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:1: production_rule : 'productions' ( production )+ -> ^( PRODUCTIONS ( production )+ ) ;
    public final production_rule_return production_rule() throws RecognitionException {
        production_rule_return retval = new production_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal14=null;
        production_return production15 = null;


        Object string_literal14_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleSubtreeStream stream_production=new RewriteRuleSubtreeStream(adaptor,"rule production");
        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:20: ( 'productions' ( production )+ -> ^( PRODUCTIONS ( production )+ ) )
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:25: 'productions' ( production )+
            {
            string_literal14=(Token)input.LT(1);
            match(input,33,FOLLOW_33_in_production_rule307); 
            stream_33.add(string_literal14);

            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:39: ( production )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==LINE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:39: production
            	    {
            	    pushFollow(FOLLOW_production_in_production_rule309);
            	    production15=production();
            	    _fsp--;

            	    stream_production.add(production15.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            // AST REWRITE
            // elements: production
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 51:51: -> ^( PRODUCTIONS ( production )+ )
            {
                // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:51:54: ^( PRODUCTIONS ( production )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(PRODUCTIONS, "PRODUCTIONS"), root_1);

                if ( !(stream_production.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_production.hasNext() ) {
                    adaptor.addChild(root_1, stream_production.next());

                }
                stream_production.reset();

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end production_rule

    public static class axiom_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start axiom_rule
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:52:1: axiom_rule : ( 'axiom' RULE -> ^( AXIOM RULE ) | 'axiom' LINE -> ^( AXIOM LINE ) );
    public final axiom_rule_return axiom_rule() throws RecognitionException {
        axiom_rule_return retval = new axiom_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal16=null;
        Token RULE17=null;
        Token string_literal18=null;
        Token LINE19=null;

        Object string_literal16_tree=null;
        Object RULE17_tree=null;
        Object string_literal18_tree=null;
        Object LINE19_tree=null;
        RewriteRuleTokenStream stream_RULE=new RewriteRuleTokenStream(adaptor,"token RULE");
        RewriteRuleTokenStream stream_LINE=new RewriteRuleTokenStream(adaptor,"token LINE");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");

        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:52:15: ( 'axiom' RULE -> ^( AXIOM RULE ) | 'axiom' LINE -> ^( AXIOM LINE ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==34) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==LINE) ) {
                    alt4=2;
                }
                else if ( (LA4_1==RULE) ) {
                    alt4=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("52:1: axiom_rule : ( 'axiom' RULE -> ^( AXIOM RULE ) | 'axiom' LINE -> ^( AXIOM LINE ) );", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("52:1: axiom_rule : ( 'axiom' RULE -> ^( AXIOM RULE ) | 'axiom' LINE -> ^( AXIOM LINE ) );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:52:20: 'axiom' RULE
                    {
                    string_literal16=(Token)input.LT(1);
                    match(input,34,FOLLOW_34_in_axiom_rule332); 
                    stream_34.add(string_literal16);

                    RULE17=(Token)input.LT(1);
                    match(input,RULE,FOLLOW_RULE_in_axiom_rule334); 
                    stream_RULE.add(RULE17);


                    // AST REWRITE
                    // elements: RULE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 53:4: -> ^( AXIOM RULE )
                    {
                        // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:53:7: ^( AXIOM RULE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(adaptor.create(AXIOM, "AXIOM"), root_1);

                        adaptor.addChild(root_1, stream_RULE.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }



                    }
                    break;
                case 2 :
                    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:54:23: 'axiom' LINE
                    {
                    string_literal18=(Token)input.LT(1);
                    match(input,34,FOLLOW_34_in_axiom_rule369); 
                    stream_34.add(string_literal18);

                    LINE19=(Token)input.LT(1);
                    match(input,LINE,FOLLOW_LINE_in_axiom_rule371); 
                    stream_LINE.add(LINE19);


                    // AST REWRITE
                    // elements: LINE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 55:25: -> ^( AXIOM LINE )
                    {
                        // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:55:28: ^( AXIOM LINE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(adaptor.create(AXIOM, "AXIOM"), root_1);

                        adaptor.addChild(root_1, stream_LINE.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }



                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end axiom_rule

    public static class angle_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start angle_rule
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:58:1: angle_rule : 'angle' angle -> ^( ANGLE angle ) ;
    public final angle_rule_return angle_rule() throws RecognitionException {
        angle_rule_return retval = new angle_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal20=null;
        angle_return angle21 = null;


        Object string_literal20_tree=null;
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleSubtreeStream stream_angle=new RewriteRuleSubtreeStream(adaptor,"rule angle");
        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:58:15: ( 'angle' angle -> ^( ANGLE angle ) )
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:58:20: 'angle' angle
            {
            string_literal20=(Token)input.LT(1);
            match(input,35,FOLLOW_35_in_angle_rule418); 
            stream_35.add(string_literal20);

            pushFollow(FOLLOW_angle_in_angle_rule420);
            angle21=angle();
            _fsp--;

            stream_angle.add(angle21.getTree());

            // AST REWRITE
            // elements: angle
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:34: -> ^( ANGLE angle )
            {
                // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:58:37: ^( ANGLE angle )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(ANGLE, "ANGLE"), root_1);

                adaptor.addChild(root_1, stream_angle.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end angle_rule

    public static class angle_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start angle
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:59:1: angle : ANGLE_NUMBER ;
    public final angle_return angle() throws RecognitionException {
        angle_return retval = new angle_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ANGLE_NUMBER22=null;

        Object ANGLE_NUMBER22_tree=null;

        try {
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:59:14: ( ANGLE_NUMBER )
            // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:59:19: ANGLE_NUMBER
            {
            root_0 = (Object)adaptor.nil();

            ANGLE_NUMBER22=(Token)input.LT(1);
            match(input,ANGLE_NUMBER,FOLLOW_ANGLE_NUMBER_in_angle445); 
            ANGLE_NUMBER22_tree = (Object)adaptor.create(ANGLE_NUMBER22);
            adaptor.addChild(root_0, ANGLE_NUMBER22_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end angle

    public static class formula_type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start formula_type
    // C:\\Users\\Razvan\\Documents\\NetBeansProjects\\Fractali\\src\\antlr\\NAFL.g:62:1: formula_type : ( 'formula' formula -> ^( FORMULA formula ) | 'formula' c_init formula -> ^( FORMULA formula c_init ) | 'formula' formula c_init -> ^( FORMULA formula c_init ) );
    public final formula_type_return formula_type() throws RecognitionException {
        formula_type_return retval = new formula_type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal23=null;
        Token string_literal25=null;
        Token string_literal28=null;
        formula_return formula24 = null;

        c_init_return c_init26 = null;

        formula_return formula27 = null;

        formula_return formula29 = null;

        c_init_return c_init30 = null;

